@@ -7,7 +7,8 @@ Fix wrong gain/volume of voices/sound effects in Sound Mode 1 (e.g. builtin alte
 Clones:
 Stern: AC/DC 1.70.0,1.70.0LE
        Spider-Man 2.62 (bootleg with replaced music)
-Bally: Embryon v92 (7-digit conversion and more)
+Bally: Baby Pac-Man (Vidiot U9 ROM Update 891-16 per Service-Bulletin dated July 11 1983)
+       Embryon v92 (7-digit conversion and more)
 
 
 
